[package]
name = "reto"
version = "0.1.0"
edition = "2021"
authors = ["Sergiy Protsiv <sergiy@protsiv.net>"]
description = "An implementation of the Named Data Networking protocol"
readme = "README.md"
repository = "https://github.com/fidinda/reto"
license = "MIT OR Apache-2.0"
keywords = ["networking"]


[lib]
name = "reto"

[features]
default = ["std", "poller", "sha2", "websocket"]
std = []
sha2 = ["dep:sha2"]
poller = ["std", "dep:polling"]
websocket = ["std", "dep:ewebsock"]

[dependencies]
ewebsock = {version = "0.8.0", optional = true }
polling = {version = "3.10.0", optional = true }
sha2 = {version = "0.10.9", optional = true }
